# backend

./: .dockerignore  .gitignore  .uvrc  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  test_openai.py
.github/ISSUE_TEMPLATE/: feat.md  set.md
apps/authentication/: authentication.py  middleware.py  permissions.py  serializers.py  urls.py  views.py
apps/avatars/: urls.py  views.py
apps/core/: tasks.py  urls.py  views.py
apps/core/services/: __init__.py  artwork_info.py  brave_service.py  gemini_service.py  hybrid_analyzer.py  ocr_service.py  script_service.py
apps/core/services/entities/: __init__.py  artwork_basic_info.py  artwork_extracted_info.py  content_fetch_info.py  extraction_metadata.py  video_script_info.py  web_search_info.py
apps/core/services/usecases/: __init__.py  artwork_info_orchestrator.py  basic_artwork_extractor.py  content_fetch_enricher.py  video_script_generator.py  web_search_enricher.py
apps/gcs/: __init__.py  apps.py  storage_service.py
apps/place/: serializers.py  tests.py  urls.py  views.py
apps/place/services/: maps_mcp.py
apps/posts/: urls.py  views.py
apps/videos/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/videos/migrations/: 0001_initial.py  0002_alter_video_table.py  0002_remove_duration_field.py  0002_remove_video_file_video_artist_video_duration_and_more.py  0002_video_user.py  0003_video_museum_name.py  0004_alter_video_thumbnail_url_alter_video_video_url.py  0005_video_description.py
apps/videos/serializers/: __init__.py  video_serializer.py
apps/videos/services/: __init__.py  video_generator.py  visionstory_service.py  visionstory_video_generator.py  visionstory_video_info.py
apps/videos/views/: __init__.py  avatar_list_view.py  video_creation_view.py  video_crud_views.py  video_viewset.py  visionstory_latest_view.py
config/: __init__.py  celery.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
grafana/data/: grafana.db
place/: serializers.py  urls.py  views.py
place/services/: maps_mcp.py
prometheus/: prometheus.yml
video/: models.py  serializers.py  urls.py  views.py
video/migrations/: 0001_initial.py  0002_remove_video_file_video_artist_video_duration_and_more.py  0003_rename_placeid_video_place_id_and_more.py
